@@ -274,26 +274,51 @@ unsigned char const TranslationTable[] =
 	[249] = 165, // ù
 	[250] = 166, // ú
 	[251] = 167, // û
-	[0x00CC] = 168, // I with grave
-	[0x00EC] = 169, // i with grave
-	[0x0104] = 170, // A with ogonek
-	[0x0106] = 171, // C with acute
-	[0x0118] = 172, // E with ogonek
-	[0x0141] = 173, // L with stroke
-	[0x0143] = 174, // N with acute
-	[0x00D3] = 175, // O with acute (duplicate)
-	[0x015A] = 176, // S with acute
-	[0x017B] = 177, // Z with dot above
-	[0x0179] = 178, // Z with acute
-	[0x0105] = 179, // a with ogonek
-	[0x0107] = 180, // c with acute
-	[0x0119] = 181, // e with ogonek
-	[0x0142] = 182, // l with stroke
-	[0x0144] = 183, // n with acute
-	[0x00F3] = 184, // o with acute (duplicate)
-	[0x015B] = 185, // s with acute
-	[0x017C] = 186, // z with dot above
-	[0x017A] = 187, // z with acute
+#if defined FRENCH
+	[0x00CC] = 168, // Ì
+	[0x00CE] = 169, // Î
+	[0x00EC] = 170, // ì
+	[0x00EE] = 171, // î
+	[0x0104] = 172, // Ą
+	[0x0106] = 173, // Ć
+	[0x0118] = 174, // Ę
+	[0x0141] = 175, // Ł
+	[0x0143] = 176, // Ń
+	//[0x00D3] = 177, // Ó (duplicate)
+	[0x015A] = 178, // Ś
+	[0x017B] = 179, // Ż
+	[0x0179] = 180, // Ź
+	[0x0105] = 181, // ą
+	[0x0107] = 182, // ć
+	[0x0119] = 183, // ę
+	[0x0142] = 184, // ł
+	[0x0144] = 185, // ń
+	//[0x00F3] = 186, // ó (duplicate)
+	[0x015B] = 187, // ś
+	[0x017C] = 188, // ż
+	[0x017A] = 189, // ź
+#else
+	[0x00CC] = 168, // Ì
+	[0x00EC] = 169, // ì
+	[0x0104] = 170, // Ą
+	[0x0106] = 171, // Ć
+	[0x0118] = 172, // Ę
+	[0x0141] = 173, // Ł
+	[0x0143] = 174, // Ń
+	//[0x00D3] = 175, // Ó (duplicate)
+	[0x015A] = 176, // Ś
+	[0x017B] = 177, // Ż
+	[0x0179] = 178, // Ź
+	[0x0105] = 179, // ą
+	[0x0107] = 180, // ć
+	[0x0119] = 181, // ę
+	[0x0142] = 182, // ł
+	[0x0144] = 183, // ń
+	//[0x00F3] = 184, // ó (duplicate)
+	[0x015B] = 185, // ś
+	[0x017C] = 186, // ż
+	[0x017A] = 187, // ź
+#endif
 
 	[0x0410] = 100, // cyrillic A
 	[0x0411] = 101, // cyrillic BE
